--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,23 @@
 body {
-    background-color: #50575e;
+    background-color: #ffe4c4;
   }
 h1 {
     color: #d63638;
-    text-align: center;
+    text-align: left;
   }
 
   h2 {
     color: #001c05;
-    text-align: center;
+    text-align: left;
   }
 
   h3 {
     color: #0a4b78;
-    text-align: center;
+    text-align: left;
   }
 
 
   p {
     font-weight: 500;
-    font-family: sans-serif;
+    font-family: cursive;
   }
